--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       <h1>Welcome to Riyadh</h1>
       <h3>Where A Traditional Past Meets A Modern Future.</h3>
     <div id="content">
+      <img src="transit.jpg" alt="Modern Transit">
       
       <!-- IMAGES, SMALL SUB HEADS, PARAGRAPHS, LINKS -->
     </div>
