--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
       <h3>Where A Traditional Past Meets A Modern Future.</h3>
     <div id="content">
       <img src="transit.jpg" alt="Modern Transit">
+      <h4>Travel</h4>
       
+
       <!-- IMAGES, SMALL SUB HEADS, PARAGRAPHS, LINKS -->
     </div>
   </div>
